Added all necessary frames

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -52,6 +52,123 @@
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QFrame" name="InterfaceFrame">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>45</y>
+      <width>1291</width>
+      <height>831</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Shape::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Shadow::Raised</enum>
+    </property>
+    <widget class="QFrame" name="defaultCommandFrame">
+     <property name="geometry">
+      <rect>
+       <x>4</x>
+       <y>5</y>
+       <width>101</width>
+       <height>821</height>
+      </rect>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Shape::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Shadow::Raised</enum>
+     </property>
+    </widget>
+    <widget class="QFrame" name="windowInterfaceFrame">
+     <property name="geometry">
+      <rect>
+       <x>108</x>
+       <y>5</y>
+       <width>901</width>
+       <height>771</height>
+      </rect>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Shape::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Shadow::Raised</enum>
+     </property>
+    </widget>
+    <widget class="QFrame" name="branchesFrame">
+     <property name="geometry">
+      <rect>
+       <x>1012</x>
+       <y>5</y>
+       <width>276</width>
+       <height>771</height>
+      </rect>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Shape::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Shadow::Raised</enum>
+     </property>
+    </widget>
+    <widget class="QFrame" name="userCommandFrame">
+     <property name="geometry">
+      <rect>
+       <x>108</x>
+       <y>779</y>
+       <width>901</width>
+       <height>47</height>
+      </rect>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Shape::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Shadow::Raised</enum>
+     </property>
+    </widget>
+    <widget class="QFrame" name="TODO">
+     <property name="geometry">
+      <rect>
+       <x>1012</x>
+       <y>779</y>
+       <width>276</width>
+       <height>47</height>
+      </rect>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Shape::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Shadow::Raised</enum>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QLabel" name="createdByLabel">
+    <property name="geometry">
+     <rect>
+      <x>1205</x>
+      <y>0</y>
+      <width>101</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>7</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Created By Marco Rasia</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
