--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -92,7 +92,7 @@
        <x>1012</x>
        <y>5</y>
        <width>275</width>
-       <height>380</height>
+       <height>382</height>
       </rect>
      </property>
      <property name="frameShape">
@@ -134,22 +134,6 @@
       <enum>QFrame::Shadow::Raised</enum>
      </property>
     </widget>
-    <widget class="QFrame" name="stagedFrame">
-     <property name="geometry">
-      <rect>
-       <x>1012</x>
-       <y>390</y>
-       <width>275</width>
-       <height>386</height>
-      </rect>
-     </property>
-     <property name="frameShape">
-      <enum>QFrame::Shape::StyledPanel</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Shadow::Raised</enum>
-     </property>
-    </widget>
     <widget class="QPlainTextEdit" name="logLabel">
      <property name="geometry">
       <rect>
@@ -157,6 +141,19 @@
        <y>5</y>
        <width>901</width>
        <height>771</height>
+      </rect>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QTextEdit" name="fileStatusLabel">
+     <property name="geometry">
+      <rect>
+       <x>1012</x>
+       <y>390</y>
+       <width>275</width>
+       <height>386</height>
       </rect>
      </property>
      <property name="readOnly">
